# arena-gauntlet-personal

./: .gitignore  README.md  complete_equipment_database.json  illuvial_attributes.py  illuvial_templates.json  metrics_log.csv  requirements.txt  scrape_data.py  simulation_utils.py  sync_vec_env.py  train_agent.py  train_env.py
simulation_copy/: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LinuxBuild.sh  LinuxClean.sh  LinuxPackage.sh  MacBuild.sh  MacPackage.sh  README.md  ServerLinuxPackage.sh  ServerMacPackage.sh  UnrealAndroidPackage.sh  UnrealLinuxPackage.sh  UnrealMacPackage.sh  UnrealWindowsPackage.cmd  WindowsBuild.cmd  WindowsClean.cmd  WindowsPackage.cmd  conanfile.py
simulation_copy/cmake/: CommonSettings.cmake  CompilerWarnings.cmake  GetGitRevisionDescription.cmake  Sanitizers.cmake  TestCoverage.cmake
simulation_copy/codebuild/: ci.yml
simulation_copy/conan/: conan_profile_android  conan_profile_generic_unreal_and_server  conan_profile_linux  conan_profile_linux_arm_unreal  conan_profile_linux_intel_unreal  conan_profile_linux_server  conan_profile_mac  conan_profile_mac_arm  conan_profile_mac_arm_unreal  conan_profile_mac_intel  conan_profile_mac_intel_unreal  conan_profile_windows  conan_profile_windows_debug  conan_profile_windows_profiling  conan_profile_windows_unreal
simulation_copy/docs/: profiling.md
simulation_copy/scripts/: clang-format-all.sh  clang-format.sh  clang-tidy.sh  init.cmd  init.sh
simulation_copy/simulation_cli/: CMakeLists.txt  README.md
simulation_copy/simulation_cli/src/: battle_data_loader.cc  battle_data_loader.h  battle_file_data.h  battle_file_loader.cc  battle_file_loader.h  battle_simulation.cc  battle_simulation.h  battle_test.cc  battle_test.h  cli_run_batch_command.cc  cli_run_batch_command.h  cli_run_battle_command.cc  cli_run_battle_command.h  cli_run_test_command.cc  cli_run_test_command.h  cli_set_settings_command.cc  cli_set_settings_command.h  cli_settings.cc  cli_settings.h  main.cc
simulation_copy/simulation_lib/: CMakeLists.txt
simulation_copy/simulation_lib/src/components/: abilities_component.cc  abilities_component.h  attached_effects_component.cc  attached_effects_component.h  attached_entity_component.cc  attached_entity_component.h  augment_component.h  aura_component.h  beam_component.h  chain_component.h  combat_synergy_component.h  combat_unit_component.h  consumable_component.h  dash_component.h  decision_component.h  deferred_destruction_component.h  displacement_component.cc  displacement_component.h  drone_augment_component.h  duration_component.h  filtering_component.h  focus_component.cc  focus_component.h  mark_component.h  movement_component.h  position_component.cc  position_component.h  projectile_component.h  shield_component.h  splash_component.h  state_component.h  stats_component.cc  stats_component.h  zone_component.h
simulation_copy/simulation_lib/src/data/: ability_data.cc  ability_data.h  aura_data.hpp  battle_result.cc  battle_result.h  beam_data.h  chain_data.h  combat_synergy_bonus.cc  combat_synergy_bonus.h  combat_unit_data.h  combat_unit_instance_data.cc  combat_unit_instance_data.h  combat_unit_type_id.cc  combat_unit_type_id.h  constants.h  dash_data.h  effect_data.cc  effect_data.h  effect_data_attributes.cc  effect_data_attributes.h  effect_enums.h  effect_expression.cc  effect_expression.h  effect_expression_custom_functions.cc  effect_expression_custom_functions.h  effect_package.cc  effect_package.h  effect_package_attributes.cc  effect_package_attributes.h  effect_type_id.cc  effect_type_id.h  encounter_mod_data.cc  encounter_mod_data.h  encounter_mod_instance_data.cc  encounter_mod_instance_data.h  encounter_mod_type_id.cc  encounter_mod_type_id.h  enums.cc  enums.h  hyper_config.h  (+17 more)
simulation_copy/simulation_lib/src/ecs/: component.cc  component.h  entity.cc  entity.h  event.h  event_types_data.h  event_types_map.h  hex_grid_config.cc  hex_grid_config.h  system.cc  system.h  world.cc  world.h
simulation_copy/simulation_lib/src/factories/: entity_factory.cc  entity_factory.h
simulation_copy/simulation_lib/src/profiling/: illuvium_profiling.h
simulation_copy/simulation_lib/src/systems/: ability_system.h  (+47 more)
simulation_copy/simulation_tests/: .clang-tidy  CMakeLists.txt
simulation_copy/simulation_tests/src/: abilities_component_tests.cc  ability_system_consumable_tests.cc  ability_system_data_fixtures.h  ability_system_innate_data_fixtures.h  ability_system_innate_tests.cc  ability_system_instant_innate_tests.cc  ability_system_skill_targeting_tests.cc  ability_system_tests.cc  attached_effects_system_condition_tests.cc  attached_effects_system_data_fixtures.h  attached_effects_system_negative_state_tests.cc  attached_effects_system_plane_change_tests.cc  attached_effects_system_positive_state_tests.cc  attached_effects_system_tests.cc  augment_tests.cc  aura_tests.cc  base_json_test.h  base_test_fixtures.cc  base_test_fixtures.h  beam_system_tests.cc  bonding_tests.cc  chain_system_tests.cc  channel_time_tests.cc  consumable_tests.cc  dash_system_tests.cc  decision_system_tests.cc  density_targeting_tests.cc  displacement_system_tests.cc  ecs_creation_tests.cc  effect_data_tests.cc  effect_package_tests.cc  effect_system_tests.cc  effect_validation_tests.cc  empower_tests.cc  encounter_mod_tests.cc  entity_factory_tests.cc  entity_sorting_tests.cc  enum_as_index_tests.cc  enum_map_tests.cc  enum_set_tests.cc  (+56 more)
simulation_copy/simulation_visualization/: CMakeLists.txt
simulation_copy/simulation_visualization/src/: battle_visualization.cc  battle_visualization.h  color.h  constants.h  draw_features.cc  draw_features.h  draw_helper.cc  draw_helper.h  draw_settings.cc  draw_settings.h  input.cc  input.h  raylib_cpp.h  rectangle.h  ui.cc  ui.h  vector2f.h
simulation_copy/tools/: README.md  compare_battle_results.py  convert_from_server_battle_json.py  convert_to_server_battle_json.py  generate_random_battles.py  profiling_summary.py  run_battle_files.py  sim_grid_config.py  sim_script_utility.py
(+2484 files in other folders)
